kubernetes/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: whats-chat-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: whats-chat-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whats-chat-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whats-chat-backend
  template:
    metadata:
      labels:
        app: whats-chat-backend
    spec:
      containers:
      - name: whats-chat-backend
        image: obarker94/whats-chat-backend:6499045826
        ports:
        - containerPort: 80
        env:  # Add this section to set environment variables
        - name: OTEL_COLLECTOR_ADDRESS
          value: "http://app-opentelemetry-collector.default.svc.cluster.local:4318"
